--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nuxt start",
     "export": "nuxt export",
     "serve": "nuxt serve",
-    "generate": "nuxt generate"
+    "generate": "nuxt build && nuxt export"
   },
   "dependencies": {
     "@mdi/font-build": "^1.8.5",
